Fixed Overflow issue

--- a/styles/landing.css
+++ b/styles/landing.css
@@ -20,6 +20,7 @@ a {
 body {
    background:      #fff url("../background.jpeg") no-repeat;
    background-size: cover;
+   display:         block;
    overflow:        hidden;
 }
 
